add dev dependencies

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "07-nodejs-npm-express",
   "version": "1.0.0",
-  "description": "**Author**: Keli **Version**: 1.0.0",
+  "description": "Kilovolt Blog: Now with Node",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "start:watch": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,9 @@
   "homepage": "https://github.com/kelihansen/07-nodejs-npm-express#readme",
   "dependencies": {
     "express": "^4.16.2"
+  },
+  "devDependencies": {
+    "eslint": "^4.18.2",
+    "nodemon": "^1.17.1"
   }
 }
