--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,7 @@ build/Release
 
 # Dependency directories
 node_modules/
-jspm_packages/
+json_packages/
 
 # Typescript v1 declaration files
 typings/
@@ -60,3 +60,4 @@ typings/
 
 # dotenv environment variables file
 .env
+
